--- a/mysite/templates/project.html
+++ b/mysite/templates/project.html
@@ -8,7 +8,7 @@
  <!--   <img src="{{ img.img.url }}" width="120"/>  -->
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
-                    <div class="col-md-10 col-lg-8 col-xl-7">
+                    <div class="col-md-10 col-lg-8 col-xl-7">  
                         <div class="post-heading">
                             <h1>{{project.title}}
                             </h1>
@@ -34,7 +34,23 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <p>{{project.content|safe}}</p>>
+                        <h2 class="subheading">Descrição</h2>
+                        <p>{{project.content|safe}}</p>
+                        <h2 class="subheading">Aprendizados</h2>
+                        <p>{{project.learning|safe}}</p>
+
+                        
+                        <p>{{project.programming_languages|safe}}</p>
+                        
+                        <div class="post-preview">
+                        <a class="post-meta" href="/project/{{project.pk}}">
+                            <b>➔ Repositório GitHub</b>
+                        </a>
+                        <br>
+                        <a class="post-meta" href="/project/{{project.pk}}">
+                             <b>➔ Deploy</b>
+                        </a>
+                    </div>
                     </div>
                 </div>
             </div>
