--- a/mysite/templates/home.html
+++ b/mysite/templates/home.html
@@ -27,7 +27,9 @@
     <div class="row gx-4 gx-lg-5 justify-content-center">
         <div class="col-md-10 col-lg-8 col-xl-7">
             <!-- Post preview-->
+            <section id="mainsection">
             {% for mt in common_tags %}
+            </section>
             <a class="post-meta" href="{% url 'tagged' mt.slug  %}"> #{{mt}}</a>
                     {% endfor %}
             
@@ -54,7 +56,11 @@
             <!-- Divider-->
             <hr class="my-4" />
             <!-- Pager-->
-            <div class="d-flex justify-content-end mb-4"><a class="btn btn-primary text-uppercase" href="#!">Older Posts →</a></div>
+            {% if hide%}
+            <div class="d-flex justify-content-center mb-4"><a class="btn btn-primary text-uppercase" href="{% url 'all'  %}">Todos Projetos ↓</a></div>
+            {% else %}
+            <div class="d-flex justify-content-center mb-4"><a class="btn btn-primary text-uppercase" href="{% url 'home'  %}">Projetos Recentes ↑</a></div>
+            {%endif%}
         </div>
     </div>
 </div>
