--- a/mysite/templates/layout.html
+++ b/mysite/templates/layout.html
@@ -17,6 +17,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <!-- Core theme CSS (includes Bootstrap)-->
         <link rel="stylesheet" href="{% static 'css/styles.css' %}">
+        <link rel="stylesheet" href="{% static 'css/styles2.css' %}">
     </head>
     <body>
         <!-- Navigation-->
@@ -83,7 +84,11 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
+        <script>console.log("teste")</script>
+        <script type="text/javascript" src="{% static 'js/scripts2.js' %}"></script>
         <script src="{% static 'js/scripts.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/script3.js' %}"></script>
+        
         
     </body>
 </html>
