--- a/mysite/templates/layout.html
+++ b/mysite/templates/layout.html
@@ -85,9 +85,9 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
         <script>console.log("teste")</script>
-        <script type="text/javascript" src="{% static 'js/scripts2.js' %}"></script>
         <script src="{% static 'js/scripts.js' %}"></script>
         <script type="text/javascript" src="{% static 'js/script4.js' %}"></script>
+        <script type="text/javascript" src="{% static 'js/scriptPost.js' %}"></script>
         
         
     </body>
