peinding correct day date issue

--- a/mysite/templates/home.html
+++ b/mysite/templates/home.html
@@ -91,6 +91,6 @@
 </div>
 <!-- INSERIR POSTS-->
 {% include 'postform.html' %}
-
+<input type="hidden" id="mySlug" name="variable" value="nonexist">
 
 {% endblock %}
