finished date and filter by tag with load more and less projects

--- a/mysite/templates/home.html
+++ b/mysite/templates/home.html
@@ -92,5 +92,5 @@
 <!-- INSERIR POSTS-->
 {% include 'postform.html' %}
 <input type="hidden" id="mySlug" name="variable" value="nonexist">
-
+<input type="hidden" id="mySlug2" name="variable" value="{{slug}}">
 {% endblock %}
