social login ongoing

--- a/mysite/templates/layout.html
+++ b/mysite/templates/layout.html
@@ -33,7 +33,7 @@
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="#mainsection">Projetos</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="#visitorposts">Depoimentos</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="about.html">Quem sou eu</a></li>
-                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="#mainsection">Download CV</a></li>
+                        <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="{% url 'downloadfile' %}">Download CV</a></li>
                         <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="contact.html">Contato</a></li>
                     </ul>
                 </div>
@@ -49,6 +49,9 @@
         <footer class="border-top">
             <div class="container px-4 px-lg-5" div="Project">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
+                    <div class="x-large text-center">Minhas Redes Sociais:</div>
+                </br>
+            </br>
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <ul class="list-inline text-center">
                             <li class="list-inline-item">
@@ -60,14 +63,6 @@
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#!" target="_blank">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
                                 <a href="https://github.com/robertoduartejr" target="_blank">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
@@ -75,6 +70,15 @@
                                     </span>
                                 </a>
                             </li>
+                            <li class="list-inline-item">
+                                <a href="https://github.com/robertoduartejr" target="_blank">
+                                    <span class="fa-stack fa-lg">
+                                        <i class="fas fa-circle fa-stack-2x"></i>
+                                        <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
+                                    </span>
+                                </a>
+                            </li>
+                            
                         </ul>
                         <div class="small text-center text-muted fst-italic">Copyright &copy; RDJ 2022</div>
                     </div>
