--- a/mysite/templates/postform.html
+++ b/mysite/templates/postform.html
@@ -53,7 +53,7 @@
               <ul class="list-inline text-center">
                 <li class="list-inline-item">
                   <a
-                    href="https://www.linkedin.com/in/robertoduartejr/"
+                    href="/accounts/google/login/?next={{request.path}}"
                     target="_blank"
                   >
                     <span class="fa-stack fa-lg">
