--- a/mysite/templates/postform.html
+++ b/mysite/templates/postform.html
@@ -63,7 +63,7 @@
                   </a>
                 </li>
                 <li class="list-inline-item">
-                  <a href="#!" target="_blank">
+                  <a href="/accounts/linkedin_oauth2/login/?next={{request.path}}" target="_blank">
                     <span class="fa-stack fa-lg">
                       <i class="fas fa-square fa-stack-2x"></i>
                       <i class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>
